[project]
name = "ComfyUI_Appstore"
description = "comfyAppstore, a tool that converts ComfyUI workflows into web with one click, and supports payments."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/ronaldzgithub/ComfyUI_Appstore"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Appstore"
Icon = ""

